src/scss/base/_global.scss
// ==============================================
// Base styles: Background, typography etc.
// ==============================================

html,
body {
    @include clearfix();
    background: $white;
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
    min-height: 0;
}

body {
    background: $white;
    min-height: 100vh;
    position: relative;
}

body::after {
    background-image: url('/images/alex.png');
    background-size: 30vh;
    bottom: rem(-10px);
    content: '';
    display: block;
    height: 30vh;
    opacity: 0.2;
    position: absolute;
    right: 0;
    width: 30vh;

    @include break(medium) {
        opacity: 0.3;
    }
}

